--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: mysql_57
     environment:
       - MYSQL_ROOT_PASSWORD=password
+      - TZ=Asia/Seoul
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
