--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,5 +10,6 @@ services:
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
+      - --default-time-zone=Asia/Seoul
     ports:
       - 3306:3306
