--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mydb?useSSL=false&characterEnc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=password
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
