--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'application'
 	id 'org.springframework.boot' version '2.7.8'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
@@ -36,3 +37,5 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+mainClassName = 'com.messenger.MessengerTempoApplication'
